--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
   --black-2: #3f3c3c;
   --black-3: #635a59;
   --white-1: #e8e8e8;
+  --white-2: #faf3f3d2;
 }
 /* 
 @media(prefers-color-scheme: dark) {
@@ -29,7 +30,7 @@
   list-style: none;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  color: #40514e;
+  color: var(--black-2);
   text-align: center;
   font-family: "Merriweather", serif;
 }
@@ -62,12 +63,14 @@ label.logo {
   font-family: "Sacramento", cursive;
   font-size: 35px;
   line-height: 60px;
-  padding: 0 100px;
+  padding: 0 35px;
   font-weight: bold;
 }
 .logoimg {
   width: 40px;
-  /* margin-top: 5px; */
+  position: fixed;
+  top: 10px;
+  left: 15px;
 }
 nav ul {
   float: right;
@@ -78,22 +81,9 @@ nav ul li {
   line-height: 60px;
   margin: 0;
 }
-nav ul li a {
-  color: var(--black-1);
-  font-family: "Montserrat", serif;
-  font-size: 15px;
-  padding: 21px 13px;
-  border-radius: 3px;
-  text-transform: uppercase;
-}
-nav ul li a:hover {
-  background: var(--red-2);
-  color: var(--white-1);
-  transition: 0.5s;
-}
 .checkbtn {
   font-size: 30px;
-  color: white;
+  color: var(--white-1);
   float: right;
   line-height: 60px;
   margin-right: 40px;
@@ -127,6 +117,137 @@ nav ul li a:hover {
     justify-content: center;
   }
 }
+@media (max-width: 550px) {
+  .bestSeller {
+    display: flex;
+    flex-direction: column;
+    align-items: auto;
+    margin: 20px 15vw;
+  }
+  .t1 {
+    margin: 4vh 2vw;
+    align-items: auto;
+    border-left: 1px solid var(--black-3);
+    border-top: 1px solid var(--black-3);
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: 1px 1px 20px 0 #000000;
+    -moz-box-shadow: 1px 1px 20px 0 #000000;
+    box-shadow: 1px 1px 20px 0 #000000;
+  }
+  .t1:hover {
+    margin: 3vh 1vw;
+    border-left: 1px solid var(--black-1);
+    border-top: 1px solid var(--black-1);
+    -webkit-box-shadow: 2px 2px 40px 0 #000000;
+    -moz-box-shadow: 2px 2px 40px 0 #000000;
+    box-shadow: 2px 2px 40px 0 #000000;
+  }
+  .t2 {
+    margin: 2vh 2vw;
+    align-items: auto;
+    border-left: 1px solid var(--black-3);
+    border-top: 1px solid var(--black-3);
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: 1px 1px 20px 0 #000000;
+    -moz-box-shadow: 1px 1px 20px 0 #000000;
+    box-shadow: 1px 1px 20px 0 #000000;
+  }
+  .t2:hover {
+    margin: 1vh 1vw;
+    border-left: 1px solid var(--black-1);
+    border-top: 1px solid var(--black-1);
+    -webkit-box-shadow: 2px 2px 40px 0 #000000;
+    -moz-box-shadow: 2px 2px 40px 0 #000000;
+    box-shadow: 2px 2px 40px 0 #000000;
+  }
+  .t3 {
+    margin: 6vh 2vw;
+    align-items: auto;
+    border-left: 1px solid var(--black-3);
+    border-top: 1px solid var(--black-3);
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: 1px 1px 20px 0 #000000;
+    -moz-box-shadow: 1px 1px 20px 0 #000000;
+    box-shadow: 1px 1px 20px 0 #000000;
+  }
+  .t3:hover {
+    margin: 5vh 1vw;
+    border-left: 1px solid var(--black-1);
+    border-top: 1px solid var(--black-1);
+    -webkit-box-shadow: 2px 2px 40px 0 #000000;
+    -moz-box-shadow: 2px 2px 40px 0 #000000;
+    box-shadow: 2px 2px 40px 0 #000000;
+  }
+}
+@media (min-width: 551px) {
+  .bestSeller {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: auto;
+    margin: 20px 10px;
+  }
+  .t1 {
+    padding: 5px;
+    margin: 4vh 0;
+    align-items: auto;
+    width: 29.33%;
+    border-left: 1px solid var(--black-3);
+    border-top: 1px solid var(--black-3);
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: 1px 1px 20px 0 #000000;
+    -moz-box-shadow: 1px 1px 20px 0 #000000;
+    box-shadow: 1px 1px 20px 0 #000000;
+  }
+  .t1:hover {
+    padding: 0px;
+    border-left: 1px solid var(--black-1);
+    border-top: 1px solid var(--black-1);
+    -webkit-box-shadow: 2px 2px 40px 0 #000000;
+    -moz-box-shadow: 2px 2px 40px 0 #000000;
+    box-shadow: 2px 2px 40px 0 #000000;
+  }
+  .t2 {
+    padding: 5px;
+    margin: 2vh 0;
+    align-items: auto;
+    width: 29.33%;
+    border-left: 1px solid var(--black-3);
+    border-top: 1px solid var(--black-3);
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: 1px 1px 20px 0 #000000;
+    -moz-box-shadow: 1px 1px 20px 0 #000000;
+    box-shadow: 1px 1px 20px 0 #000000;
+  }
+  .t2:hover {
+    padding: 0px;
+    border-left: 1px solid var(--black-1);
+    border-top: 1px solid var(--black-1);
+    -webkit-box-shadow: 2px 2px 40px 0 #000000;
+    -moz-box-shadow: 2px 2px 40px 0 #000000;
+    box-shadow: 2px 2px 40px 0 #000000;
+  }
+  .t3 {
+    padding: 5px;
+    margin: 6vh 0;
+    align-items: auto;
+    width: 29.33%;
+    border-left: 1px solid var(--black-3);
+    border-top: 1px solid var(--black-3);
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: 1px 1px 20px 0 #000000;
+    -moz-box-shadow: 1px 1px 20px 0 #000000;
+    box-shadow: 1px 1px 20px 0 #000000;
+  }
+  .t3:hover {
+    padding: 0px;
+    border-left: 1px solid var(--black-1);
+    border-top: 1px solid var(--black-1);
+    -webkit-box-shadow: 2px 2px 40px 0 #000000;
+    -moz-box-shadow: 2px 2px 40px 0 #000000;
+    box-shadow: 2px 2px 40px 0 #000000;
+  }
+}
 @media (max-width: 858px) {
   .checkbtn {
     display: block;
@@ -135,23 +256,30 @@ nav ul li a:hover {
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: #2c3e50;
+    background: var(--red-1);
     top: 60px;
     left: -100%;
     text-align: center;
     transition: all 0.5s;
   }
+  nav ul li a {
+    color: var(--white-1);
+    font-family: "Montserrat", serif;
+    font-size: 20px;
+    padding: 21px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
+  }
+  nav ul li a:hover {
+    background: none;
+    color: var(--white-2);
+    font-weight: 600;
+    transition: 0.5s;
+  }
   nav ul li {
     display: block;
     margin: 50px 0;
     line-height: 30px;
-  }
-  nav ul li a {
-    font-size: 20px;
-  }
-  nav ul li a:hover {
-    background: none;
-    color: #0082e6;
   }
   #check:checked ~ ul {
     left: 0;
@@ -166,41 +294,45 @@ nav ul li a:hover {
   .introBook {
     width: 60vw;
   }
-  .bestSeller {
-    display: flex;
-    flex-direction: column;
-    align-items: auto;
-    margin: 20px 30px;
-  }
-  .t1 {
-    margin: 4vh 2vw;
-    align-items: auto;
-    border-left: 0.1px solid grey;
-    border-top: 0.1px solid grey;
-    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .t2 {
-    margin: 2vh 2vw;
-    align-items: auto;
-    border-left: 0.1px solid grey;
-    border-top: 0.1px solid grey;
-    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .t3 {
-    margin: 6vh 2vw;
-    align-items: auto;
-    border-left: 0.1px solid grey;
-    border-top: 0.1px solid grey;
-    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
   .links {
     display: flex;
     justify-content: space-around;
     padding: auto;
-}
+  }
+  .right {
+    background-color: var(--red-2);
+    padding: 5px 20px 15px 20px;
+    border-radius: 4px;
+    width: 80%;
+    border-left: 1px solid var(--red-1);
+    border-top: 1px solid var(--red-1);
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .btns {
+    display: flex;
+    justify-content: space-around;
+  }
+  .field {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+  }
 }
 
 @media (min-width: 859px) {
+  nav ul li a {
+    color: var(--black-1);
+    font-family: "Montserrat", serif;
+    font-size: 15px;
+    padding: 21px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
+  }
+  nav ul li a:hover {
+    background: var(--red-2);
+    color: var(--white-1);
+    transition: 0.5s;
+  }
   .intro {
     display: flex;
     flex-direction: row;
@@ -223,24 +355,24 @@ nav ul li a:hover {
     margin: 4vh 2vw;
     align-items: auto;
     width: 25.33%;
-    border-left: 0.1px solid grey;
-    border-top: 0.1px solid grey;
+    border-left: 0.1px solid var(--black-3);
+    border-top: 0.1px solid var(--black-3);
     box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   .t2 {
     margin: 2vh 2vw;
     align-items: auto;
     width: 25.33%;
-    border-left: 0.1px solid grey;
-    border-top: 0.1px solid grey;
+    border-left: 0.1px solid var(--black-3);
+    border-top: 0.1px solid var(--black-3);
     box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   .t3 {
     margin: 6vh 2vw;
     align-items: auto;
     width: 25.33%;
-    border-left: 0.1px solid grey;
-    border-top: 0.1px solid grey;
+    border-left: 0.1px solid var(--black-3);
+    border-top: 0.1px solid var(--black-3);
     box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   .links {
@@ -249,14 +381,36 @@ nav ul li a:hover {
     margin-inline-start: 30%;
     margin-inline-end: 30%;
     padding: auto;
-}
-.links_foot {
-  display: flex;
-  justify-content: space-between;
-  margin-inline-start: 33%;
-  margin-inline-end: 33%;
-  padding: auto;
-}
+  }
+  .links_foot {
+    display: flex;
+    justify-content: space-between;
+    margin-inline-start: 33%;
+    margin-inline-end: 33%;
+    padding: auto;
+  }
+  .right {
+    background-color: var(--red-2);
+    padding: 5px 20px 15px 20px;
+    border-radius: 4px;
+    width: 70%;
+    border-left: 1px solid var(--red-1);
+    border-top: 1px solid var(--red-1);
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .btns {
+    display: flex;
+    justify-content: space-around;
+  }
+  .field {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+  }
+  .formid {
+    position: relative;
+    top: 14px;
+  }
 }
 .btn {
   background: var(--red-1);
@@ -264,11 +418,26 @@ nav ul li a:hover {
   border-radius: 0.2rem;
   padding: 1rem 1.5rem;
 }
+.btn1 {
+  background: var(--red-1);
+  color: var(--white-1);
+  border-radius: 1.5rem;
+  padding: 1rem 1.5rem;
+}
 .btn:hover {
   background: var(--red-2);
   color: var(--white-1);
 }
-
+.btn2 {
+  background: var(--red-1);
+  color: var(--white-1);
+  border-radius: 0.2rem;
+  padding: 1rem 1.5rem;
+}
+.btn2:hover {
+  background: var(--white-1);
+  color: var(--red-1);
+}
 .introBtn {
   margin: 50px 0;
 }
@@ -282,7 +451,7 @@ hr {
   border-style: none;
   border-top-style: dotted;
   border-width: 5px;
-  border-color: grey;
+  border-color: var(--black-3);
   margin: 8vh auto;
   width: 5%;
 }
@@ -297,7 +466,7 @@ hr {
 }
 .footer-content {
   color: var(--black-1);
-  font-size: 0.75rem; 
+  font-size: 0.75rem;
 }
 .back_img {
   width: 80px;
@@ -309,11 +478,36 @@ hr {
   left: 20px;
 }
 .footer a {
-  font-family: 'Montserrat', serif;
+  font-family: "Montserrat", serif;
   color: var(--black-3);
   transition: color 1s;
 }
 .footer a:hover {
   color: var(--black-1);
   font-weight: 600;
+}
+input[type="text"],
+input[type="email"] {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid var(--black-3);
+  border-radius: 5px;
+  margin: 5px;
+}
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid var(--black-3);
+  border-radius: 5px;
+  margin: 5px;
+}
+.reviewContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.gap {
+  margin: 80px 0px;
 }
